# bskyshell

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/: main.py
